--- a/signal.html
+++ b/signal.html
@@ -7,137 +7,27 @@
 <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 <style>
 *{margin:0;padding:0;box-sizing:border-box;font-family:'Share Tech Mono', monospace}
-body{
-  background:#000;
-  min-height:100vh;
-  color:#0f0;
-  overflow-x:hidden;
-  display:flex;
-  justify-content:center;
-  padding-top:20px;
-}
-#matrix{
-  position:fixed;
-  top:0;left:0;
-  width:100%;height:100%;
-  z-index:-1;
-}
-.panel{
-  width:90%;
-  max-width:900px;
-  background:rgba(0,0,0,0.6);
-  border:1px solid #0f0;
-  padding:30px 28px;
-  border-radius:12px;
-  backdrop-filter:blur(6px);
-  box-shadow:0 0 35px rgba(0,255,0,0.12);
-  display:flex;
-  flex-direction:column;
-}
-.title{
-  text-align:center;
-  font-size:24px;
-  margin-bottom:24px;
-  text-shadow:0 0 12px #0f0;
-  font-weight:bold;
-  cursor:pointer;
-}
+body{background:#000;min-height:100vh;color:#0f0;overflow-x:hidden;display:flex;justify-content:center;padding-top:20px;}
+#matrix{position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1;}
+.panel{width:90%;max-width:900px;background:rgba(0,0,0,0.6);border:1px solid #0f0;padding:30px 28px;border-radius:12px;backdrop-filter:blur(6px);box-shadow:0 0 35px rgba(0,255,0,0.12);display:flex;flex-direction:column;}
+.title{text-align:center;font-size:24px;margin-bottom:24px;text-shadow:0 0 12px #0f0;font-weight:bold;cursor:pointer;}
 .row{display:flex;flex-direction:column;gap:12px;margin-bottom:16px}
 .row label{font-size:15px;color:#0f0;font-weight:600}
-.row select,.row input{
-  width:100%;
-  padding:12px;
-  background:#000;
-  border:1px solid #0f0;
-  color:#0f0;
-  border-radius:8px;
-  outline:none;
-  font-size:14px;
-}
+.row select,.row input{width:100%;padding:12px;background:#000;border:1px solid #0f0;color:#0f0;border-radius:8px;outline:none;font-size:14px;}
 .btns{display:flex;gap:12px;margin-top:12px;flex-wrap:wrap;justify-content:center}
-.btn{
-  flex:1;
-  min-width:150px;
-  padding:12px;
-  background:linear-gradient(90deg,#00ff0f,#00cc8a);
-  border:1px solid #0f0;
-  color:#000;
-  border-radius:8px;
-  cursor:pointer;
-  font-size:15px;
-  font-weight:bold;
-  text-shadow:0 0 6px #0f0;
-  transition:.2s;
-  box-shadow:0 0 20px rgba(0,255,0,0.5);
-}
+.btn{flex:1;min-width:150px;padding:12px;background:linear-gradient(90deg,#00ff0f,#00cc8a);border:1px solid #0f0;color:#000;border-radius:8px;cursor:pointer;font-size:15px;font-weight:bold;text-shadow:0 0 6px #0f0;transition:.2s;box-shadow:0 0 20px rgba(0,255,0,0.5);}
 .btn:hover{background:linear-gradient(90deg,#00cc8a,#00ff0f);box-shadow:0 0 24px #0f0}
-.output{
-  margin-top:20px;
-  padding:14px;
-  border:1px dashed rgba(0,255,0,0.3);
-  min-height:220px;
-  white-space:pre-line;
-  overflow-y:auto;
-  border-radius:8px;
-  font-size:14px;
-  line-height:1.4;
-}
-#assetBox{
-  display:grid;
-  grid-template-columns:repeat(2,1fr);
-  gap:8px;
-}
-#assetBox label{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:6px 8px;
-  border-radius:6px;
-  border:1px solid rgba(0,255,0,0.2);
-  transition:.2s;
-  cursor:pointer;
-}
-#assetBox label:hover{
-  background:rgba(0,255,0,0.1);
-  box-shadow:0 0 10px #0f0;
-}
-#assetBox input[type="checkbox"]{
-  accent-color:#0f0;
-}
-.selectAllBtn{
-  margin-top:6px;
-  background:rgba(0,0,0,0.6);
-  border:1px solid #0f0;
-  padding:6px 10px;
-  border-radius:6px;
-  cursor:pointer;
-  color:#0f0;
-  text-shadow:0 0 4px #0f0;
-  font-size:13px;
-  align-self:start;
-}
-.selectAllBtn:hover{background:rgba(0,40,0,0.7);box-shadow:0 0 10px #0f0}
-#adminPanel{
-  display:none;
-  margin-top:20px;
-  padding:20px;
-  border:2px solid #0f0;
-  border-radius:12px;
-  background:rgba(0,0,0,0.7);
-}
-#adminPanel h3{
-  text-align:center;
-  color:#0f0;
-  margin-bottom:12px;
-}
-#adminPanel p{
-  color:#0f0;
-  font-size:14px;
-}
-@media(max-width:500px){
-  #assetBox{grid-template-columns:1fr;}
-  .btns{flex-direction:column;}
-}
+.output{margin-top:20px;padding:14px;border:1px dashed rgba(0,255,0,0.3);min-height:220px;white-space:pre-line;overflow-y:auto;border-radius:8px;font-size:14px;line-height:1.4;}
+#assetBox{display:grid;grid-template-columns:repeat(2,1fr);gap:8px;}
+#assetBox label{display:flex;justify-content:space-between;align-items:center;padding:6px 8px;border-radius:6px;border:1px solid rgba(0,255,0,0.2);transition:.2s;cursor:pointer;}
+#assetBox label:hover{background:rgba(0,255,0,0.1);box-shadow:0 0 10px #0f0;}
+#assetBox input[type="checkbox"]{accent-color:#0f0;}
+.selectAllBtn{margin-top:6px;background:rgba(0,0,0,0.6);border:1px solid #0f0;padding:6px 10px;border-radius:6px;cursor:pointer;color:#0f0;text-shadow:0 0 4px #0f0;font-size:13px;align-self:start;}
+.selectAllBtn:hover{background:rgba(0,40,0,0.7);box-shadow:0 0 10px #0f0;}
+#adminPanel{display:none;margin-top:20px;padding:20px;border:2px solid #0f0;border-radius:12px;background:rgba(0,0,0,0.7);}
+#adminPanel h3{text-align:center;color:#0f0;margin-bottom:12px;}
+#adminPanel p{color:#0f0;font-size:14px;}
+@media(max-width:500px){#assetBox{grid-template-columns:1fr;} .btns{flex-direction:column;}}
 </style>
 </head>
 <body>
@@ -261,7 +151,7 @@ function generateSignals(count){
   current.setHours(current.getUTCHours()+tzOffset);
   let output=`▶️ DATE: ${current.toLocaleDateString('en-GB').replace(/\//g,'.')} ◀️\n\n⏰ UTC ${tzOffset>=0?'+':'-'}${tzOffset}:00 ; MTG :- 1 STEP➕\n\n          😈 FINORIX MATRIX 😈\n\n⌛️ ${document.getElementById('tf').value} Minutes\n\n`;
   for(let i=0;i<count;i++){
-      const gap=Math.floor(Math.random()*6)+3;
+      const gap=Math.floor(Math.random()*6)+3; // 3-8 minutes
       current.setMinutes(current.getMinutes()+gap);
       const t=current.toTimeString().substring(0,5);
       const asset=randomAsset(selectedAssets);
@@ -351,7 +241,7 @@ function showLicensePopup(){
     }
 }
 
-// Admin Panel Unlock (FIXED)
+// Admin Panel Unlock (No alert)
 let adminClick = 0;
 const adminPanel = document.getElementById('adminPanel');
 document.getElementById('panelTitle').addEventListener('click', () => {
@@ -359,8 +249,7 @@ document.getElementById('panelTitle').addEventListener('click', () => {
     if(adminClick >= 5){
         adminPanel.style.display = "block";
         adminPanel.scrollIntoView({behavior:"smooth"});
-        setTimeout(()=>alert("⚡ Admin Panel Unlocked ⚡"),100);
-        adminClick=0;
+        adminClick = 0;
     }
 });
 function hideAdmin(){adminPanel.style.display='none';}
