--- a/signal.html
+++ b/signal.html
@@ -1,258 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Finorix Matrix AI — Signal Panel</title>
-<link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Finorix Matrix AI</title>
 <style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:'Share Tech Mono', monospace}
-body{background:#000;min-height:100vh;color:#0f0;overflow-x:hidden;display:flex;justify-content:center;padding-top:20px;}
-#matrix{position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1;}
-.panel{width:90%;max-width:900px;background:rgba(0,0,0,0.6);border:1px solid #0f0;padding:30px 28px;border-radius:12px;backdrop-filter:blur(6px);box-shadow:0 0 35px rgba(0,255,0,0.12);display:flex;flex-direction:column;}
-.title{text-align:center;font-size:24px;margin-bottom:24px;text-shadow:0 0 12px #0f0;font-weight:bold;cursor:pointer;}
-.row{display:flex;flex-direction:column;gap:12px;margin-bottom:16px}
-.row label{font-size:15px;color:#0f0;font-weight:600}
-.row select,.row input{width:100%;padding:12px;background:#000;border:1px solid #0f0;color:#0f0;border-radius:8px;outline:none;font-size:14px;}
-.btns{display:flex;gap:12px;margin-top:12px;flex-wrap:wrap;justify-content:center}
-.btn{flex:1;min-width:150px;padding:12px;background:linear-gradient(90deg,#00ff0f,#00cc8a);border:1px solid #0f0;color:#000;border-radius:8px;cursor:pointer;font-size:15px;font-weight:bold;text-shadow:0 0 6px #0f0;transition:.2s;box-shadow:0 0 20px rgba(0,255,0,0.5);}
-.btn:hover{background:linear-gradient(90deg,#00cc8a,#00ff0f);box-shadow:0 0 24px #0f0}
-.output{margin-top:20px;padding:14px;border:1px dashed rgba(0,255,0,0.3);min-height:220px;white-space:pre-line;overflow-y:auto;border-radius:8px;font-size:14px;line-height:1.4;}
-#assetBox{display:grid;grid-template-columns:repeat(2,1fr);gap:8px;}
-#assetBox label{display:flex;justify-content:space-between;align-items:center;padding:6px 8px;border-radius:6px;border:1px solid rgba(0,255,0,0.2);transition:.2s;cursor:pointer;}
-#assetBox label:hover{background:rgba(0,255,0,0.1);box-shadow:0 0 10px #0f0;}
-#assetBox input[type="checkbox"]{accent-color:#0f0;}
-.selectAllBtn{margin-top:6px;background:rgba(0,0,0,0.6);border:1px solid #0f0;padding:6px 10px;border-radius:6px;cursor:pointer;color:#0f0;text-shadow:0 0 4px #0f0;font-size:13px;align-self:start;}
-.selectAllBtn:hover{background:rgba(0,40,0,0.7);box-shadow:0 0 10px #0f0;}
-#adminPanel{display:none;margin-top:20px;padding:20px;border:2px solid #0f0;border-radius:12px;background:rgba(0,0,0,0.7);}
-#adminPanel h3{text-align:center;color:#0f0;margin-bottom:12px;}
-#adminPanel p{color:#0f0;font-size:14px;}
-@media(max-width:500px){#assetBox{grid-template-columns:1fr;} .btns{flex-direction:column;}}
+    body{
+        margin:0;
+        background:#060b18;
+        font-family:Arial, sans-serif;
+        color:white;
+        text-align:center;
+    }
+    h1{
+        margin-top:60px;
+        font-size:32px;
+        cursor:pointer;
+    }
+    input{
+        width:260px;
+        padding:10px;
+        margin-top:8px;
+        border-radius:6px;
+        border:none;
+        outline:none;
+        font-size:16px;
+    }
+    button{
+        margin-top:12px;
+        padding:10px 25px;
+        background:#1a73e8;
+        color:white;
+        font-size:17px;
+        border:none;
+        border-radius:6px;
+        cursor:pointer;
+    }
+    #adminPanel{
+        display:none;
+        width:90%;
+        max-width:450px;
+        margin:25px auto;
+        padding:20px;
+        background:#0d1224;
+        border-radius:10px;
+        text-align:left;
+    }
+    #closeAdmin{
+        margin-top:15px;
+        background:#d43535;
+    }
 </style>
 </head>
 <body>
-<canvas id="matrix"></canvas>
-<div class="panel">
-  <div class="title" id="panelTitle">FINORIX MATRIX — SIGNAL SYSTEM</div>
 
-  <div class="row">
-    <label>Time Zone (UTC)</label>
-    <select id="timezone">
-      <option value="6" selected>Bangladesh (UTC +06:00)</option>
-      <option value="5">Pakistan (UTC +05:00)</option>
-      <option value="0">UTC +00:00</option>
-      <option value="7">UTC +07:00</option>
-    </select>
-  </div>
+<h1 id="title">Finorix Matrix AI</h1>
 
-  <div class="row">
-    <label>Market Type</label>
-    <select id="marketType" onchange="updateAssets()">
-      <option value="real">Real Market</option>
-      <option value="otc">OTC Market</option>
-    </select>
-  </div>
+<h3>Enter License Key</h3>
+<input type="text" id="licenseInput" placeholder="Enter license key">
+<br>
+<button onclick="checkLicense()">Login</button>
 
-  <div class="row">
-    <label>Assets (Tick to Select)</label>
-    <div id="assetBox"></div>
-    <button class="selectAllBtn" onclick="toggleSelectAll()">Select / Deselect All</button>
-  </div>
+<div id="adminPanel">
+    <h2>ADMIN PANEL</h2>
+    <p><b>Manage licenses, devices, etc.</b></p>
 
-  <div class="row">
-    <label>Timeframe (Minutes)</label>
-    <select id="tf">
-      <option value="1">1 Minute</option>
-      <option value="2">2 Minutes</option>
-      <option value="3">3 Minutes</option>
-      <option value="5">5 Minutes</option>
-    </select>
-  </div>
+    <h3>Give New License</h3>
+    <input type="text" id="newDevice" placeholder="Device ID">
+    <input type="datetime-local" id="newExpiry">
 
-  <div class="row">
-    <label>Number of Signals</label>
-    <input id="count" type="number" value="5" min="1" />
-  </div>
+    <button onclick="giveLicense()">Save License</button>
 
-  <div class="btns">
-    <button class="btn" onclick="showLicensePopup()">⚡ GENERATE SIGNALS ⚡</button>
-    <button class="btn" onclick="copyAll()">COPY</button>
-    <button class="btn" onclick="resetOut()">RESET</button>
-  </div>
-
-  <div class="output" id="out"></div>
-
-  <!-- Admin Panel -->
-  <div id="adminPanel">
-    <h3>ADMIN PANEL</h3>
-    <p>Manage licenses, devices, etc.</p>
-    <button onclick="hideAdmin()" style="padding:8px 12px; border:none; background:#0f0; color:#000; border-radius:6px; cursor:pointer;">Close Admin Panel</button>
-  </div>
+    <button id="closeAdmin" onclick="closeAdmin()">Close Admin Panel</button>
 </div>
 
+
 <script>
-// Matrix Effect
-const c=document.getElementById('matrix');
-const ctx=c.getContext('2d');
-let fontSize=16;
-let cols=Math.floor(window.innerWidth/fontSize);
-let drops=[];
-function resize(){c.width=window.innerWidth;c.height=window.innerHeight;cols=Math.floor(c.width/fontSize);drops=[];for(let x=0;x<cols;x++)drops[x]=1;}
-function initMatrix(){resize();setInterval(draw,40);}
-const matrixChars='アカサタナハマヤラワ0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ'.split('');
-function draw(){
-  ctx.fillStyle='rgba(0,0,0,0.05)';
-  ctx.fillRect(0,0,c.width,c.height);
-  ctx.fillStyle='#0f0';
-  ctx.font=fontSize+'px Share Tech Mono';
-  for(let i=0;i<drops.length;i++){
-      let text=matrixChars[Math.floor(Math.random()*matrixChars.length)];
-      ctx.fillText(text,i*fontSize,drops[i]*fontSize);
-      if(drops[i]*fontSize>c.height && Math.random()>0.975) drops[i]=0;
-      drops[i]++;
-  }
-}
-window.addEventListener('resize',initMatrix);
-initMatrix();
+let clickCount = 0;
+let adminUnlocked = false;
 
-// Signal System
-const realAssets = ["EUR/USD","GBP/USD","USD/JPY","AUD/JPY","EUR/JPY","GBP/JPY","USD/CAD","AUD/CAD","EUR/GBP","USD/CHF"];
-const otcAssets = ["NZD/USD (OTC)"];
-function updateAssets(){
-  const type=document.getElementById('marketType').value;
-  const box=document.getElementById('assetBox');
-  box.innerHTML='';
-  const assets=type==='real'?realAssets:otcAssets;
-  assets.forEach(a=>{
-    const label=document.createElement('label');
-    const input=document.createElement('input');
-    input.type='checkbox';
-    input.value=a;
-    label.appendChild(document.createTextNode(a));
-    label.appendChild(input);
-    box.appendChild(label);
-  });
-}
-updateAssets();
-function randomAsset(selectedAssets){
-  if(selectedAssets.length>0){
-    return selectedAssets[Math.floor(Math.random()*selectedAssets.length)];
-  }else{
-    return realAssets[Math.floor(Math.random()*realAssets.length)];
-  }
-}
-function generateSignals(count){
-  const signalBox=document.getElementById("out");
-  signalBox.textContent="";
-  const checkboxes=document.querySelectorAll('#assetBox input[type="checkbox"]');
-  const selectedAssets=Array.from(checkboxes).filter(c=>c.checked).map(c=>c.value);
-  let current=new Date();
-  const tzOffset=parseInt(document.getElementById('timezone').value)||0;
-  current.setHours(current.getUTCHours()+tzOffset);
-  let output=`▶️ DATE: ${current.toLocaleDateString('en-GB').replace(/\//g,'.')} ◀️\n\n⏰ UTC ${tzOffset>=0?'+':'-'}${tzOffset}:00 ; MTG :- 1 STEP➕\n\n          😈 FINORIX MATRIX 😈\n\n⌛️ ${document.getElementById('tf').value} Minutes\n\n`;
-  for(let i=0;i<count;i++){
-      const gap=Math.floor(Math.random()*6)+3; // 3-8 minutes
-      current.setMinutes(current.getMinutes()+gap);
-      const t=current.toTimeString().substring(0,5);
-      const asset=randomAsset(selectedAssets);
-      const dir=Math.random()>0.5?'CALL':'PUT';
-      output+=`${asset}  | ${t} | ${dir}\n`;
-  }
-  output+=`\n            ━━━━━━・━━━━━━\n😈 Avoid signal after Doji, <80%, Gap, or 3–4 B2B opposite candles 😈\n            ━━━━━━・━━━━━━`;
-  typeWrite(output,signalBox);
-}
-function typeWrite(text,element){
-  let index=0;
-  element.textContent="";
-  function type(){
-      if(index<text.length){
-          element.textContent+=text.charAt(index);
-          index++;
-          setTimeout(type,15);
-      }
-  }
-  type();
-}
-function copyAll(){navigator.clipboard.writeText(document.getElementById('out').textContent);}
-function resetOut(){document.getElementById('out').textContent='';}
-function toggleSelectAll(){
-  const checkboxes=document.querySelectorAll('#assetBox input[type="checkbox"]');
-  const allChecked=Array.from(checkboxes).every(c=>c.checked);
-  checkboxes.forEach(c=>c.checked=!allChecked);
-}
+// ---------------------------------------
+// ADMIN PANEL OPEN (5 clicks + password)
+// ---------------------------------------
+document.getElementById("title").addEventListener("click", function(){
+    clickCount++;
 
-// License + Device Lock
-const validLicenses = [{key:"LIC-12345",device:""}];
-function showLicensePopup(){
-    const overlay = document.createElement("div");
-    overlay.style.position = "fixed";
-    overlay.style.top = "0";
-    overlay.style.left = "0";
-    overlay.style.width = "100%";
-    overlay.style.height = "100%";
-    overlay.style.background = "rgba(0,0,0,0.9)";
-    overlay.style.display = "flex";
-    overlay.style.justifyContent = "center";
-    overlay.style.alignItems = "center";
-    overlay.style.zIndex = "9999";
+    if(clickCount >= 5 && !adminUnlocked){
+        const pass = prompt("Enter Admin Password:");
 
-    const box = document.createElement("div");
-    box.style.background = "#000";
-    box.style.border = "2px solid #0f0";
-    box.style.padding = "30px";
-    box.style.borderRadius = "12px";
-    box.style.maxWidth = "400px";
-    box.style.width = "90%";
-    box.style.color = "#0f0";
-    box.style.fontFamily = "'Share Tech Mono', monospace";
-    box.style.textAlign = "center";
-    box.style.boxShadow = "0 0 25px #0f0";
-
-    box.innerHTML = `
-        <h2>🛡 Hacking System 🛡</h2>
-        <p>Enter your <b>License Key</b> below to access signals.</p>
-        <input type="text" id="popupLicense" placeholder="Enter License Key" style="width:90%;padding:10px;margin:10px 0;background:#000;border:1px solid #0f0;color:#0f0;border-radius:6px;font-size:14px;">
-        <button id="popupSubmit" style="margin-top:12px;padding:10px 20px;background:linear-gradient(90deg,#00ff0f,#00cc8a);border:none;color:#000;font-weight:bold;border-radius:8px;cursor:pointer;">Submit</button>
-        <button id="popupClose" style="margin-top:12px;padding:8px 15px;background:#000;border:1px solid #0f0;color:#0f0;border-radius:8px;cursor:pointer;margin-left:10px;">Close</button>
-    `;
-    overlay.appendChild(box);
-    document.body.appendChild(overlay);
-
-    document.getElementById("popupClose").onclick = () => document.body.removeChild(overlay);
-
-    document.getElementById("popupSubmit").onclick = () => {
-        const licenseInput = document.getElementById("popupLicense").value.trim();
-        let lic = validLicenses.find(l=>l.key===licenseInput);
-        if(lic){
-            const deviceId = localStorage.getItem("deviceId") || crypto.randomUUID();
-            localStorage.setItem("deviceId", deviceId);
-
-            if(!lic.device || lic.device===deviceId){
-                lic.device=deviceId;
-                document.body.removeChild(overlay);
-                const count = parseInt(document.getElementById('count').value) || 5;
-                generateSignals(count);
-            } else {
-                alert("This license is already used on another device.");
-            }
-        } else {
-            alert("Invalid License!");
+        if(pass === "@TraderParvej@"){
+            adminUnlocked = true;
+            openAdmin();
         }
-    }
-}
 
-// Admin Panel Unlock (No alert)
-let adminClick = 0;
-const adminPanel = document.getElementById('adminPanel');
-document.getElementById('panelTitle').addEventListener('click', () => {
-    adminClick++;
-    if(adminClick >= 5){
-        adminPanel.style.display = "block";
-        adminPanel.scrollIntoView({behavior:"smooth"});
-        adminClick = 0;
+        clickCount = 0;
     }
 });
-function hideAdmin(){adminPanel.style.display='none';}
+
+// ---------------------------------------
+// OPEN & CLOSE ADMIN PANEL
+// ---------------------------------------
+function openAdmin(){
+    document.getElementById("adminPanel").style.display = "block";
+}
+function closeAdmin(){
+    document.getElementById("adminPanel").style.display = "none";
+}
+
+// ---------------------------------------
+// CHECK LICENSE
+// ---------------------------------------
+function checkLicense(){
+    let key = document.getElementById("licenseInput").value.trim();
+
+    let saved = localStorage.getItem("licenses");
+    saved = saved ? JSON.parse(saved) : {};
+
+    if(saved[key]){
+        let expiry = new Date(saved[key].expiry);
+        let now = new Date();
+
+        if(now <= expiry){
+            alert("Login Successful!");
+            window.location.href = "signal.html";
+        } else {
+            alert("License Expired!");
+        }
+    } else {
+        alert("Invalid License!");
+    }
+}
+
+// ---------------------------------------
+// GIVE LICENSE (device cannot get new license if old is active)
+// ---------------------------------------
+function giveLicense(){
+    let device = document.getElementById("newDevice").value.trim();
+    let expiry = document.getElementById("newExpiry").value;
+
+    if(device === "" || expiry === ""){
+        alert("Fill all fields!");
+        return;
+    }
+
+    let data = localStorage.getItem("licenses");
+    data = data ? JSON.parse(data) : {};
+
+    if(data[device]){
+        let now = new Date();
+        let oldExpiry = new Date(data[device].expiry);
+
+        if(now <= oldExpiry){
+            alert("This device already has an active license!");
+            return;
+        }
+    }
+
+    data[device] = {expiry: expiry};
+    localStorage.setItem("licenses", JSON.stringify(data));
+
+    alert("License Saved!");
+}
 </script>
+
 </body>
 </html>
